Update precompiled locales to SVN rev 135847
I should script this, but basically:

    svn co https://svn.mozilla.org/projects/l10n-misc/trunk/browserid-bigtent/locale
    ./node_modules/.bin/compile-json locale static/i18n
    zmv -f '(static/i18n/*)/gmail.js' '$1/messages.js'
    zmv -f '(static/i18n/*)/gmail.json' '$1/messages.json'
    sed -i '' -e 's/  "gmail":/  "messages":/' static/i18n/*/*

Then update the SVN revision in scripts/rpmbuild.sh and commit everything

To check the SVN revision, use `svn info locale`

--- a/static/i18n/ko/messages.json
+++ b/static/i18n/ko/messages.json
@@ -1,35 +1,35 @@
 {
    "messages": {
       "": {
-         "Project-Id-Version": " PACKAGE VERSION\nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2012-06-24 09:50+0200\nPO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\nLast-Translator: FULL NAME <EMAIL@ADDRESS>\nLanguage-Team: LANGUAGE <LL@li.org>\nLanguage: ko\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit\nX-Generator: Translate Toolkit 1.9.0\n"
+         "Project-Id-Version": " PACKAGE VERSION\nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2012-06-24 09:50+0200\nPO-Revision-Date: 2013-08-28 09:41+0000\nLast-Translator: Hyeonseok <hyeonseok@gmail.com>\nLanguage-Team: LANGUAGE <LL@li.org>\nLanguage: ko\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=1; plural=0;\nX-Generator: Pootle 2.5.0\nX-POOTLE-MTIME: 1377682863.0\n"
       },
       "Loading...": [
          null,
-         ""
+         "읽는중..."
       ],
       "Error": [
          null,
-         ""
+         "오류"
       ],
       "Accounts don't match": [
          null,
-         ""
+         "계정 불일치"
       ],
       "Something went wrong. Please try again later.": [
          null,
-         ""
+         "오류가 발생하였습니다. 잠시 후에 다시 시도해 주세요."
       ],
       "You're currently signed into Google as %s.": [
          null,
-         ""
+         "%s로 Google에 로그인 하였습니다."
       ],
       "If you want to use %s, log out of Google and sign in again.": [
          null,
-         ""
+         "%s를 사용하려면 Google에 로그아웃 한 후 다시 로그인 해 주세요."
       ],
       "Force Google logout": [
          null,
-         ""
+         "Google 로그아웃"
       ]
    }
 }
