--- a/static/i18n/fi/messages.json
+++ b/static/i18n/fi/messages.json
@@ -1,35 +1,35 @@
 {
    "messages": {
       "": {
-         "Project-Id-Version": " PACKAGE VERSION\nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2012-06-24 09:50+0200\nPO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\nLast-Translator: FULL NAME <EMAIL@ADDRESS>\nLanguage-Team: LANGUAGE <LL@li.org>\nLanguage: fi\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit\nX-Generator: Translate Toolkit 1.9.0\n"
+         "Project-Id-Version": " PACKAGE VERSION\nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2012-06-24 09:50+0200\nPO-Revision-Date: 2014-02-02 09:58+0000\nLast-Translator: Atte <attel0@gmail.com>\nLanguage-Team: LANGUAGE <LL@li.org>\nLanguage: fi\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=2; plural=(n != 1);\nX-Generator: Pootle 2.5.0\nX-POOTLE-MTIME: 1391335117.0\n"
       },
       "Loading...": [
          null,
-         ""
+         "Ladataan..."
       ],
       "Error": [
          null,
-         ""
+         "Virhe"
       ],
       "Accounts don't match": [
          null,
-         ""
+         "Käyttäjätilit eivät täsmää"
       ],
       "Something went wrong. Please try again later.": [
          null,
-         ""
+         "Jotakin meni vikaan. Yritä myöhemmin uudelleen."
       ],
       "You're currently signed into Google as %s.": [
          null,
-         ""
+         "Olet kirjautuneena Googleen tunnuksella %s."
       ],
       "If you want to use %s, log out of Google and sign in again.": [
          null,
-         ""
+         "Jos haluat käyttää tunnusta %s, kirjaudu ulos Googlesta ja kirjaudu sitten uudelleen sisään."
       ],
       "Force Google logout": [
          null,
-         ""
+         "Pakota kirjautumaan ulos Googlesta"
       ]
    }
 }
